# corncon2022

./: LICENSE  README.md
firmware/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig  version.txt
firmware/main/: CMakeLists.txt  app.cpp  app.h  appconfig.cpp  appconfig.h  appmsg.h  corncon22.cpp  pinconfig.h  vkeyboard.cpp  vkeyboard.h
firmware/main/art/: cherry.cpp  color-down.cpp  color-left.cpp  color-right.cpp  color-up.cpp  color2-down.cpp  color2-left.cpp  color2-right.cpp  color2-up.cpp  color3-down.cpp  color3-left.cpp  color3-right.cpp  color3-up.cpp  eye-down.cpp  eye-left.cpp  eye-right.cpp  eye-up.cpp  gimp_type.h  pacman1.cpp  pacman2.cpp  pacman3.cpp  red-down.cpp  red-left.cpp  red-right.cpp  red-up.cpp  rename.sh  sprits.h  spritsheet.xcf  straberry.cpp  vuln-ghost1.cpp  vuln-ghost2.cpp
firmware/main/maps/: mainmap.cpp  mainmap.map  mapkeys.h  pacmanlevel1.cpp  pacmanlevel1.map
firmware/main/menus/: appbase_menu.cpp  appbase_menu.h  badge_test.cpp  badge_test.h  connection_details.cpp  game_of_life.cpp  game_of_life.h  gui_list_processor.cpp  high_score.cpp  high_score.h  main_nav.cpp  main_nav.h  menu3d.cpp  menu3d.h  menu_state.cpp  menu_state.h  pacman.cpp  pacman.h  pair.cpp  setting_menu.cpp  setting_menu.h  space_invaders.cpp  space_invaders.h  update_menu.cpp  update_menu.h  wifi_menu.cpp
firmware/main/spaceinvader/: barrier.cpp  bonus.cpp  explosion.cpp  fix.all.sh  invader-explosion.cpp  invader-explosion.xcf  invader1.cpp  invader1.xcf  invader1a.cpp  invader1a.xcf  invader2.cpp  invader2.xcf  invader2a.cpp  invader2a.xcf  invader3.cpp  invader3.xcf  invader3a.cpp  invader3a.xcf  invader_shot.cpp  make_fun.sh  player.cpp  player.xcf  player_explosion.cpp  player_explosion1.cpp  player_explosion1.xcf  player_explosion1a.cpp  player_explosion1a.xcf  player_shot.cpp  sprits.h
(+15 files in other folders)
