set(srcs "./app.cpp"
   "./appconfig.cpp"
  "./corncon22.cpp"
  "./vkeyboard.cpp"
  "./timezones.cpp"
  "./menus/menu_state.cpp"
  "./menus/appbase_menu.cpp"
  "./menus/gui_list_processor.cpp"
  "./menus/setting_menu.cpp"
  "./menus/menu3d.cpp"
  "./menus/3d/renderer.cpp"
  "./menus/game_of_life.cpp"
  "./menus/badge_test.cpp"
  "./menus/main_nav.cpp"
  "./menus/pacman.cpp"
  "./menus/wifi_menu.cpp"
  "./menus/connection_details.cpp"
  "./menus/update_menu.cpp"
  "./menus/high_score.cpp"
  "./menus/pair.cpp"
  "./maps/pacmanlevel1.cpp"
  "./art/cherry.cpp"
"./art/color2-down.cpp"
"./art/color2-left.cpp"
"./art/color2-right.cpp"
"./art/color2-up.cpp"
"./art/color3-down.cpp"
"./art/color3-left.cpp"
"./art/color3-right.cpp"
"./art/color3-up.cpp"
"./art/color-down.cpp"
"./art/color-left.cpp"
"./art/color-right.cpp"
"./art/color-up.cpp"
"./art/eye-down.cpp"
"./art/eye-left.cpp"
"./art/eye-right.cpp"
"./art/eye-up.cpp"
"./art/pacman1.cpp"
"./art/pacman2.cpp"
"./art/pacman3.cpp"
"./art/red-down.cpp"
"./art/red-left.cpp"
"./art/red-right.cpp"
"./art/red-up.cpp"
"./art/straberry.cpp"
"./art/vuln-ghost1.cpp"
"./art/vuln-ghost2.cpp"
)

idf_component_register(SRCS "${srcs}"
		INCLUDE_DIRS ../components/esp-etl/etl/include/ ../components/libesp
		EMBED_FILES maps/mainmap.map maps/pacmanlevel1.map
		)



